<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/purchase_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/products_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="Products" />

   <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textColor="@color/black"
        tools:text="@string/product_name" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/total" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/text_margin">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:ems="10"
            android:hint="@string/address"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:ems="10"
            android:hint="@string/contact_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/payment_mode" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/text_margin">

        <RadioButton
            android:id="@+id/radio_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/cod" />

        <RadioButton
            android:id="@+id/radio_netbanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/netbanking" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/complete_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/complete_shopping">

    </com.google.android.material.button.MaterialButton>
</LinearLayout>